# Gmind

./: .gitignore  README.md  electron-builder.json5  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  优化建议报告.md
.kiro/specs/markdown-mindmap-viewer/: design.md  requirements.md  tasks.md
docs/: MANUAL_TESTING_GUIDE.md  SYSTEM_TRAY_IMPLEMENTATION.md  TASK_16_COMPLETION_CHECKLIST.md  TRAY_ICON.md
electron/: FileSystemService.ts  KeyboardShortcutHandler.ts  SystemTrayManager.ts  WindowManager.ts  main.ts
scripts/: generate-tray-icon.js
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: fs.rs
src/components/: ContentPopup.css  ContentPopup.tsx  HomePage.css  HomePage.test.tsx  HomePage.tsx  MindMapPage.css  MindMapPage.tsx  MindMapRenderer.css  MindMapRenderer.test.tsx  MindMapRenderer.tsx  OutlineView.css  OutlineView.tsx  SettingsPage.css  SettingsPage.tsx  TabNavigation.css  TabNavigation.tsx  Toolbar.css  Toolbar.test.tsx  Toolbar.tsx  ToolbarToggle.css  ToolbarToggle.tsx  index.ts
src/hooks/: useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useWindowResize.test.ts  useWindowResize.ts
src/services/: MarkdownParser.test.ts  MarkdownParser.ts  MarkdownStringifier.ts  StorageService.test.ts  StorageService.ts
src/store/: index.ts  useAppStore.test.ts  useAppStore.ts
src/styles/: variables.css
src/test/: setup.ts
src/types/: index.ts  ipc.ts  models.ts
